# bluechip-osmosis-contract

./: .gitignore  AUDIT_DELTA.md  AUDIT_FINDINGS_INDEPENDENT.md  AUDIT_FINDINGS_ROUND2.md  AUDIT_FINDINGS_ROUND3.md  AUDIT_REPORT.md  Cargo.toml  FUZZING.md  Makefile  OSMOSIS_MIGRATION_AUDIT.md  README.md  RUNBOOK.md  SECURITY_AUDIT.md  SECURITY_REVIEW_PREAUDIT.md  commit_pools.txt.bak-20260714-021148  commit_pools.txt.devbytes-20260718-131015  commit_pools.txt.pre-gamm-migration-20260718-114117  commit_pools_stack1.txt.bak  deploy_osmosis.sh  osmo_rehearsal.env  osmo_rehearsal.state  osmo_rehearsal_bob.env  osmo_rehearsal_carol.env  osmo_rehearsal_dave.env  osmo_testnet.env  osmo_testnet.state.150usd-20260714-021148  osmo_testnet.state.bak-20260714-014921  osmo_testnet.state.devbytes-20260718-131015  osmo_testnet.state.pre-gamm-migration-20260718-114117  osmo_testnet_v2.env  osmo_testnet_v2.state  osmo_testnet_v2_bob.env  osmosis_mainnet.env
.github/workflows/: ci.yml
ci/: check_prod_build.py
creator-pool/: Cargo.toml
creator-pool/src/: admin.rs  commit.rs  contract.rs  error.rs  generic_helpers.rs  lib.rs  liquidity_helpers.rs  mock_querier.rs  msg.rs  query.rs  state.rs  swap_helper.rs
creator-pool/src/commit/: distribution.rs  distribution_batch.rs  post_threshold.rs  pre_threshold.rs  threshold_crossing.rs  threshold_payout.rs
creator-pool/src/testing/: admin_tests.rs  audit_regression_tests.rs  audit_tests.rs  creator_claim_tests.rs  fixtures.rs  invariant_tests.rs  liquidity_tests.rs  mod.rs  query_tests.rs  regression_tests.rs  swap_tests.rs  threshold_tests.rs  update_pool_tests.rs
docs/: FRONTEND_MIGRATION.md  MULTISIG.md  ORACLE_CONSTANTS.md  OSMOSIS_DEPLOY.md
expand-economy/: Cargo.toml
expand-economy/src/: contract.rs  error.rs  lib.rs  migrate.rs  regression_tests.rs  tests.rs  timelock.rs
factory/: Cargo.toml
factory/src/: error.rs  execute.rs  internal_bluechip_price_oracle.rs  lib.rs  migrate.rs  mint_bluechips_pool_creation.rs  mock_querier.rs  msg.rs  pool_create_cleanup.rs  pool_creation_reply.rs  pool_struct.rs  query.rs  state.rs  usd_price.rs
factory/src/execute/: config.rs  pool_lifecycle.rs  upgrades.rs
factory/src/execute/pool_lifecycle/: admin.rs  create.rs
factory/src/testing/: audit_tests.rs  coverage_gap_tests.rs  mod.rs  oracle_repro.rs  oracle_tests.rs  regression_tests.rs  tests.rs  update_tests.rs
frontend/: .env.local.example
frontend/src/: App.tsx
frontend/src/components/: Commit.tsx  CommitTracker.tsx  CreatePool.tsx  Liquidity.tsx  Swap.tsx  WalletConnect.tsx
frontend/src/components/modals/: BuyModal.tsx  CommitModal.tsx  SellModal.tsx  TokenInfoModal.tsx
frontend/src/lib/: osmosisGamm.ts
frontend/src/pages/: CreatePool.tsx  Discover.tsx  Portfolio.tsx
frontend/src/types/: FrontendTypes.tsx
fuzz/: Cargo.toml
fuzz-stateful/src/: actions.rs  factory_shim.rs
gov/: storecode_proposal.json
integration-tests/: Cargo.toml  README.md
integration-tests/tests/: lifecycle.rs
keepers/: .env.example  README.md  package-lock.json  package.json
keepers/src/: distribution-keeper.ts
keepers/src/__tests__/: config.test.ts  decisions.test.ts  discovery.test.ts  distribution-keeper.integration.test.ts  mock-contracts.ts  prune-loop.test.ts  retry-notify-loop.test.ts
keepers/src/lib/: balance.ts  client.ts  config.ts  decisions.ts  discovery.ts  distribution-loop.ts  executor.ts  prune-loop.ts  retry-notify-loop.ts  types.ts
router/src/: contract.rs  error.rs  execution.rs  msg.rs  simulation.rs  state.rs
router/src/testing/: guard_tests.rs  integration_tests.rs  mock_factory.rs  mock_pool.rs  mod.rs
scripts/: README.md  _helpers.sh  continue_distribution.sh  create_commit_pool.sh  cross_threshold.sh  liquidity.sh  make_storecode_proposal.sh  route_swap.sh  run_lifecycle_test.sh  status.sh  swap.sh
standard-pool/: Cargo.toml
standard-pool/examples/: schema.rs
standard-pool/src/: contract.rs  lib.rs  msg.rs  query.rs
standard-pool/src/testing/: accept_nft_ownership.rs  balance_verify.rs  claim_emergency.rs  collect_fees.rs  deposit_liquidity.rs  emergency_withdraw.rs  fixtures.rs  instantiation.rs  queries.rs  remove_liquidity.rs  swap.rs
