[workspace]
members = [
    "packages/*",
    "creator-pool",
    "factory",
    "router",
]
exclude = [
    # cargo-fuzz crate uses libFuzzer + nightly; excluded from the
    # default workspace so stable `cargo build` doesn't try to compile it.
    "fuzz",
    # osmosis-test-tube integration harness: links the Osmosis chain binary
    # (a heavy Go shared library) and needs pre-built optimized wasm
    # artifacts, so it is excluded from the default workspace. Run it
    # explicitly from `integration-tests/` in an environment that has the
    # test binary + `artifacts/*.wasm` (see integration-tests/README.md).
    "integration-tests",
]

resolver = "2"

[workspace.package]
version = "1.0.0"

[workspace.dependencies]
sha2 = "0.10"
cosmwasm-schema = "2.2.0"
cosmwasm-std = "2.2.0"
cw2 = "2.0.0"
cw-controllers = "2.0.0"
cw-multi-test = { version = "=2.1.1", features = ["staking"] }
cw-storage-plus = "2.0.0"
cw-utils = "2.0.0"
schemars = "0.8.15"
semver = "1"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
thiserror = "2.0.2"
integer-sqrt = "0.1"
proptest = "1.0"
cw20 = "2.0.0"
cw20-base = { version = "2.0.0", features = ["library"] }
# Osmosis-native message bindings: TokenFactory (creator token),
# GAMM balancer pool creation (the AMM venue), and poolmanager swaps
# (post-threshold commit routing). 0.27 is the newest release that
# compiles on the workspace's Rust 1.75 toolchain against cosmwasm-std 2.x.
osmosis-std = "0.27.0"
# Protobuf decoding for osmosis-std reply responses
# (MsgCreateBalancerPoolResponse / MsgSwapExactAmountInResponse). Pinned
# to the same prost major osmosis-std 0.27 uses so the derived
# `prost::Message` impls line up.
prost = { version = "0.13", default-features = false, features = ["prost-derive"] }
easy-addr = { path = "packages/easy-addr" }

[workspace.metadata.scripts]
build = "cargo build"
test = "cargo test"

# [profile.release.package.pool]
# codegen-units = 1
# incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = "z"
panic = "abort"
strip = true
codegen-units = 1
