[package]
name = "factory"

version.workspace = true
authors = ["Bluechip"]
edition = "2021"
description = "Bluechip Factory"

license = "Apache-2.0"
repository = "https://github.com/Bluechip23/bluechip-osmosis-contract"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# `integration_short_timing` is the integration-test-only feature that
# shortens timelocks and rate limits. Used by the docker-built wasm for
# shell-script integration tests. NEVER ship to production. Unit tests do
# NOT enable this — that would break tests written against prod constants.
integration_short_timing = []
library = []

# PRODUCTION deployment build. Empty feature set: real 48h timelocks.
# This is the ONLY factory artifact that should be deployed to a public
# chain. The optimizer emits it as `factory-prod.wasm`; the Makefile
# copies that onto the canonical `artifacts/factory.wasm` that deploy
# tooling loads.
[[package.metadata.optimizer.builds]]
name = "prod"
features = []

# Docker-built wasm for shell-script integration tests. Enables
# `integration_short_timing` (short timelocks/rate-limits). NEVER ship.
[[package.metadata.optimizer.builds]]
name = "integration"
features = ["integration_short_timing"]

[package.metadata.scripts]
optimize = { workspace = true }

[dependencies]
sha2 = {workspace = true}
pool-factory-interfaces = { path = "../packages/pool-factory-interfaces" }
cosmwasm-schema = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }

semver = {workspace = true}
# `cosmwasm_1_1` enables `QuerierWrapper::query_supply`, used by
# production `query.rs::query_creator_token_info` to read the creator
# TokenFactory denom's bank supply. When the whole workspace is built,
# this feature arrives via unification (easy-addr enables `cosmwasm_1_4`),
# so `cargo build`/optimizer builds are unaffected; declaring it here lets
# the factory crate (and `cargo test -p factory`) compile standalone.
cosmwasm-std = { workspace = true, features = ["cosmwasm_1_1"] }
serde = { workspace = true }
cw-storage-plus = { workspace = true }
thiserror = { workspace = true }
cw-utils = { workspace = true }
osmosis-std = "0.27.0"

[dev-dependencies]
cw-multi-test = { workspace = true }

