[package]
name = "integration-tests"
version = "0.0.0"
edition = "2021"
publish = false
description = "osmosis-test-tube end-to-end tests for the bluechip Osmosis contracts"

# This crate is EXCLUDED from the root workspace (see root Cargo.toml
# `exclude`). It links the Osmosis chain binary via `osmosis-test-tube`
# (a heavy Go shared library) and needs pre-built optimized wasm artifacts,
# so it must be run explicitly and only in an environment that has both.
# See README.md.

[dependencies]

[dev-dependencies]
# osmosis-test-tube bundles the real Osmosis chain so the native modules
# (tokenfactory / gamm / poolmanager / twap) actually execute. Pin a version
# whose embedded cosmwasm-vm matches this workspace's cosmwasm-std 2.x. If
# `cargo test` fails to resolve or the runner API differs, bump this to the
# osmosis-test-tube release that tracks the Osmosis version you target and
# adjust the (small) runner surface used in tests/. See README.md.
osmosis-test-tube = "27.0.0"
cosmwasm-std = { version = "2.2.0", features = ["cosmwasm_1_1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Protobuf encode for set_param_set payloads (same major osmosis-std
# 0.27 / osmosis-test-tube 27 build against).
prost = "0.13"

# Contract message/response types — reused so the tests speak the exact wire
# shapes the contracts expect (no hand-maintained JSON that can drift). The
# `library` feature drops the wasm entry points so these compile as plain
# libs on the host.
factory = { path = "../factory", features = ["library"] }
creator-pool = { path = "../creator-pool", features = ["library"] }
pool-factory-interfaces = { path = "../packages/pool-factory-interfaces" }
